# libkeyboard

./: .gitignore  README.md  paser.py  paser.spec  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
examples/: build_gui.bat  check_dlls.py  gui_assistant.py
libkeyboard/: __init__.py
libkeyboard/keyboard/: __init__.py  keyboard_mapping.py  keyboard_mapping_win.py  linux.py  test_keyboard_mapping.py  test_windows_keyboard.py  windows.py
tests/: test_smoke.py
